Fix default theme detection and remove scrollbar styling

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -127,26 +127,6 @@
     overflow-y: scroll;
   }
 
-  /* width */
-  ::-webkit-scrollbar {
-    @apply w-3;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    @apply bg-skin-fill;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    @apply bg-skin-card;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    @apply bg-skin-card-muted;
-  }
-
   code,
   blockquote {
     word-wrap: break-word;
